fixed widths that were too big

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ ul li{
   a {
   text-decoration:none;
   color:black;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 a:hover {
@@ -31,7 +31,9 @@ a:hover {
 ul {
   list-style:none;
 }
-
+footer {
+  min-width: 100vw;
+}
 #cat {
   text-decoration: underline;
   font-size: 1em;
@@ -151,7 +153,7 @@ footer p {
   margin-bottom: 0;
 }
 /*NAVIGATION RESPONSIVE*/
-@media (max-width: 800px), (max-height: 600px) {
+@media (max-width: 850px), (max-height: 600px) {
   * {
     max-width: 100%;
   }
